include/Myelin/Value.h

	MYELIN_API Myelin::Value *myelin_value_new ();
	
	MYELIN_API void myelin_value_free (Myelin::Value *value);
	
	
	MYELIN_API const Myelin::TypeInfo *myelin_value_get_type_info (Myelin::Value *value);
	
	MYELIN_API bool myelin_value_is_pointer (Myelin::Value *value);
	MYELIN_API bool myelin_value_is_empty (Myelin::Value *value);
	MYELIN_API void myelin_value_clear (Myelin::Value *value);
	
	
	
	/* boolean */
	MYELIN_API bool myelin_value_get_bool (const Myelin::Value *value);
	MYELIN_API void myelin_value_set_bool (Myelin::Value *value, bool val);
	
	
	/* char */
	MYELIN_API char myelin_value_get_char (const Myelin::Value *value);
	MYELIN_API void myelin_value_set_char (Myelin::Value *value, char val);
	
	MYELIN_API uchar myelin_value_get_uchar (const Myelin::Value *value);
	MYELIN_API void  myelin_value_set_uchar (Myelin::Value *value, uchar val);
	
	
	/* integer */
	MYELIN_API int  myelin_value_get_int (const Myelin::Value *value);
	MYELIN_API void myelin_value_set_int (Myelin::Value *value, int val);
	
	MYELIN_API uint myelin_value_get_uint (const Myelin::Value *value);
	MYELIN_API void myelin_value_set_uint (Myelin::Value *value, uint val);
	
	
	/* long */
	MYELIN_API long myelin_value_get_long (const Myelin::Value *value);
	MYELIN_API void myelin_value_set_long (Myelin::Value *value, long val);
	
	MYELIN_API ulong myelin_value_get_ulong (const Myelin::Value *value);
	MYELIN_API void  myelin_value_set_ulong (Myelin::Value *value, ulong val);
	
	
	/* 64bit integer */
	MYELIN_API int64 myelin_value_get_int64 (const Myelin::Value *value);
	MYELIN_API void  myelin_value_set_int64 (Myelin::Value *value, int64 val);
	
	MYELIN_API uint64 myelin_value_get_uint64 (const Myelin::Value *value);
	MYELIN_API void   myelin_value_set_uint64 (Myelin::Value *value, uint64 val);
	
	
	/* float */
	MYELIN_API float myelin_value_get_float (const Myelin::Value *value);
	MYELIN_API void  myelin_value_set_float (Myelin::Value *value, float val);
	
	
	/* double */
	MYELIN_API double myelin_value_get_double (const Myelin::Value *value);
	MYELIN_API void   myelin_value_set_double (Myelin::Value *value, double val);
	
	
	/* string */
	MYELIN_API const char *myelin_value_get_string (const Myelin::Value *value);
	MYELIN_API void        myelin_value_set_string (Myelin::Value *value, const char *val);
	
	
	/* pointer */
	MYELIN_API void *myelin_value_get_pointer (const Myelin::Value *value);
	MYELIN_API void  myelin_value_set_pointer (Myelin::Value *value, void *val);