include/Myelin/Class.h

	class Object;
	class Constructor;
	class Function;
	MYELIN_API const char *myelin_class_get_name (Myelin::Class *klass);
	
	MYELIN_API Myelin::List *myelin_class_get_namespace (Myelin::Class *klass);
	
	
	MYELIN_API void myelin_class_register_constructor (Myelin::Class *klass,
	                                                   Myelin::Constructor *constructor);
	
	MYELIN_API Myelin::List *myelin_class_get_constructor_list (Myelin::Class *klass);
	
	
	MYELIN_API void myelin_class_register_function (Myelin::Class *klass,
	                                                Myelin::Function *function);
	
	MYELIN_API Myelin::Function *myelin_class_get_function (Myelin::Class *klass,
	                                                        const char *name);
	
	
	MYELIN_API Myelin::List *myelin_class_get_function_list (Myelin::Class *klass);
	
	
	
	MYELIN_API void *myelin_class_create_instance (const Myelin::Class *klass,
	                                               const Myelin::List *params);
	
	
	MYELIN_API Myelin::Object *myelin_class_create_object (const Myelin::Class *klass,
	                                                       const Myelin::List *params);
	
	
	MYELIN_API Myelin::Object *myelin_class_create_object_instance (const Myelin::Class *klass,
	                                                                void* instance);