bindings/python/myelin/introspection.py

    
    def __init__ (self, ptr = None, owner = True):
        # create a constructor
        if ptr is None: raise NotImplementedError, 'Meta constructors can only be retrieved'
        self._ptr = ptr
        self._owner = owner
    
    
    @classmethod
    def from_pointer (cls, ptr, owner):
        if ptr is None: raise ValueError, "Constructor pointer cannot be 'None'"
        return cls (ptr, owner)
    
    
    def from_param (self): return self._ptr
    
    
    def get_param_count (self):
        return __lib__.myelin_constructor_get_param_count (self)
    
    
    def get_param_type (self, index):
        return TypeInfo.from_pointer (__lib__.myelin_constructor_get_param_type (self, index), False)
    
    
    def get_param_list (self):
        return List.from_pointer (__lib__.myelin_constructor_get_param_list (self), True)
    
    
    def call (self, params):
        if params.get_size() <> self.get_param_count():
            raise ValueError, "Parameter list must have '%d' matching values, '%d' was given" % (self.get_param_count(), params.get_size())
        
        for index in range(0, params.get_size()):
            
            param_type = params[index].get_type()
            expected_type = self.get_param_type (index)
            
            if param_type != expected_type:
                raise TypeError, "Parameter '%d' does not match the appropriate type. Expected '%s', got '%s'" % (index+1, expected_type.get_name(), param_type.get_name())
        
        return Value.from_pointer (__lib__.myelin_constructor_call (self, params), True)







###############################################
# Class                                       #
###############################################

class Class (object):
    
    def __init__ (self, ptr = None, owner = True):
        # create a class
        if ptr is None: raise NotImplementedError, 'Meta classes can only be retrieved'
        self._ptr = ptr
        self._owner = owner
    
    
    @classmethod
    def from_pointer (cls, ptr, owner):
        if ptr is None: raise ValueError, "Class pointer cannot be 'None'"
        return cls (ptr, owner)
    
    
    def from_param (self): return self._ptr
    
    
    def get_name (self):
        return __lib__.myelin_class_get_name (self)
    
    
    def get_namespace (self):
        list = List.from_pointer (__lib__.myelin_class_get_namespace (self), True)
        
        namespace = []
        for val in list:
            namespace.append (val.get_string())
        return namespace
    
    
    def register_constructor (self, constructor):
        __lib__.myelin_class_register_constructor (self, constructor)
    
    
    def get_constructor_list (self):
        return List.from_pointer (__lib__.myelin_class_get_constructor_list (self), True)
    
    
    
    def register_function (self, function):
        __lib__.myelin_class_register_function (self, function)
    
    
    def get_function (self, name):
        return Function.from_pointer (__lib__.myelin_class_get_function (self, name), False)
    
    
    def get_function_list (self):
        return List.from_pointer (__lib__.myelin_class_get_function_list (self), True)
    
    
    
    def create_instance (self, params):
        return __lib__.myelin_class_create_instance (self, params)
    
    
    def create_object (self, params):
        return Object.from_pointer (__lib__.myelin_class_create_object (self, params), True)
    
    
    def create_object_instance (self, instance):
        return Object.from_pointer (__lib__.myelin_class_create_object_instance (self, instance), True)






###############################################
# Repository                                  #
###############################################

class Repository (object):
    
    def __init__ (self, name, ptr = None, owner = True):
        # create a repository
        if ptr is None:
            if name is None:
                raise ValueError, "A repository name must be provided"
            ptr = __lib__.myelin_repository_new (name)
            
        self._ptr = ptr
        self._owner = owner
    
    
    def __del__ (self):
        if self._owner: self.free()
    
    
    @classmethod
    def from_pointer (cls, ptr, owner):
        if ptr is None: raise ValueError, "Repository pointer cannot be 'None'"
        return cls (None, ptr, owner)
    
    
    def from_param (self): return self._ptr
    
    
    def free (self):
        if self._ptr is not None: self_.ptr = __lib__.myelin_repository_free (self)
    
    
    def get_name (self):
        return __lib__.myelin_repository_get_name (self)
    
    
    def get_class (self, name):
        return Class.from_pointer (__lib__.myelin_repository_get_class (self, name), False)
    
    
    def register_class (self, klass):
        __lib__.myelin_repository_register_class (self, klass)
    
    
    def get_class_list (self):
        return List.from_pointer (__lib__.myelin_repository_get_class_list (self), True)






###############################################
# Repository Factory                          #
###############################################

class RepositoryFactory (object):
    
    @classmethod
    def create (cls, name):
        return Repository.from_pointer (__lib__.myelin_repository_factory_create (name), True)
    
    
    @classmethod
    def get (cls, name):
        return Repository.from_pointer (__lib__.myelin_repository_factory_get (name), False)
    
    
    @classmethod
    def add (cls, repo):
        __lib__.myelin_repository_factory_add (repo)
    
    
    @classmethod
    def get_repository_list (cls):
        return List.from_pointer (__lib__.myelin_repository_factory_get_repository_list(), True)







###############################################
# Set Type Prototypes                         #
###############################################

__lib__.myelin_type_get_name.argtypes = [Type]
__lib__.myelin_type_get_name.restype  = ctypes.c_char_p

__lib__.myelin_type_bool.argtypes = None
__lib__.myelin_type_bool.restype  = ctypes.c_void_p
__lib__.myelin_type_char.argtypes = None
__lib__.myelin_type_char.restype  = ctypes.c_void_p
__lib__.myelin_type_uchar.argtypes = None
__lib__.myelin_type_uchar.restype  = ctypes.c_void_p
__lib__.myelin_type_int.argtypes = None
__lib__.myelin_type_int.restype  = ctypes.c_void_p
__lib__.myelin_type_uint.argtypes = None
__lib__.myelin_type_uint.restype  = ctypes.c_void_p
__lib__.myelin_type_long.argtypes = None
__lib__.myelin_type_long.restype  = ctypes.c_void_p
__lib__.myelin_type_ulong.argtypes = None
__lib__.myelin_type_ulong.restype  = ctypes.c_void_p
__lib__.myelin_type_int64.argtypes = None
__lib__.myelin_type_int64.restype  = ctypes.c_void_p
__lib__.myelin_type_uint64.argtypes = None
__lib__.myelin_type_uint64.restype  = ctypes.c_void_p
__lib__.myelin_type_float.argtypes = None
__lib__.myelin_type_float.restype  = ctypes.c_void_p
__lib__.myelin_type_double.argtypes = None
__lib__.myelin_type_double.restype  = ctypes.c_void_p
__lib__.myelin_type_string.argtypes = None
__lib__.myelin_type_string.restype  = ctypes.c_void_p
__lib__.myelin_type_pointer.argtypes = None
__lib__.myelin_type_pointer.restype  = ctypes.c_void_p




###############################################
# Set TypeInfo Prototypes                     #
###############################################

__lib__.myelin_type_info_get_type.argtypes = [TypeInfo]
__lib__.myelin_type_info_get_type.restype  = ctypes.c_void_p

__lib__.myelin_type_info_get_name.argtypes = [TypeInfo]
__lib__.myelin_type_info_get_name.restype  = ctypes.c_char_p


__lib__.myelin_type_info_is_constant.argtypes = [TypeInfo]
__lib__.myelin_type_info_is_constant.restype  = ctypes.c_bool

__lib__.myelin_type_info_is_reference.argtypes = [TypeInfo]
__lib__.myelin_type_info_is_reference.restype  = ctypes.c_bool

__lib__.myelin_type_info_is_pointer.argtypes = [TypeInfo]
__lib__.myelin_type_info_is_pointer.restype  = ctypes.c_bool


__lib__.myelin_type_info_equals.argtypes = [TypeInfo, TypeInfo]
__lib__.myelin_type_info_equals.restype  = ctypes.c_bool




###############################################
# Set Value Prototypes                        #
###############################################

__lib__.myelin_value_new.argtypes = None
__lib__.myelin_value_new.restype  = ctypes.c_void_p

__lib__.myelin_value_free.argtypes = [Value]
__lib__.myelin_value_free.restype  = None

__lib__.myelin_value_get_type_info.argtypes = [Value]
__lib__.myelin_value_get_type_info.restype  = ctypes.c_void_p

__lib__.myelin_value_is_pointer.argtypes = [Value]
__lib__.myelin_value_is_pointer.restype  = ctypes.c_bool

__lib__.myelin_value_is_empty.argtypes = [Value]
__lib__.myelin_value_is_empty.restype  = ctypes.c_bool

__lib__.myelin_value_clear.argtypes = [Value]
__lib__.myelin_value_clear.restype  = None


# boolean
__lib__.myelin_value_get_bool.argtypes = [Value]
__lib__.myelin_value_get_bool.restype  = ctypes.c_bool
__lib__.myelin_value_set_bool.argtypes = [Value, ctypes.c_bool]
__lib__.myelin_value_set_bool.restype  = None

# char
__lib__.myelin_value_get_char.argtypes = [Value]
__lib__.myelin_value_get_char.restype  = ctypes.c_char
__lib__.myelin_value_set_char.argtypes = [Value, ctypes.c_char]
__lib__.myelin_value_set_char.restype  = None

# uchar
__lib__.myelin_value_get_uchar.argtypes = [Value]
__lib__.myelin_value_get_uchar.restype  = ctypes.c_ubyte
__lib__.myelin_value_set_uchar.argtypes = [Value, ctypes.c_ubyte]
__lib__.myelin_value_set_uchar.restype  = None

# integer
__lib__.myelin_value_get_int.argtypes = [Value]
__lib__.myelin_value_get_int.restype  = ctypes.c_int
__lib__.myelin_value_set_int.argtypes = [Value, ctypes.c_int]
__lib__.myelin_value_set_int.restype  = None

# uint
__lib__.myelin_value_get_uint.argtypes = [Value]
__lib__.myelin_value_get_uint.restype  = ctypes.c_bool
__lib__.myelin_value_set_uint.argtypes = [Value, ctypes.c_uint]
__lib__.myelin_value_set_uint.restype  = None

# long
__lib__.myelin_value_get_long.argtypes = [Value]
__lib__.myelin_value_get_long.restype  = ctypes.c_long
__lib__.myelin_value_set_long.argtypes = [Value, ctypes.c_long]
__lib__.myelin_value_set_long.restype  = None

# ulong
__lib__.myelin_value_get_ulong.argtypes = [Value]
__lib__.myelin_value_get_ulong.restype  = ctypes.c_ulong
__lib__.myelin_value_set_ulong.argtypes = [Value, ctypes.c_ulong]
__lib__.myelin_value_set_ulong.restype  = None

# 64bit integer
__lib__.myelin_value_get_int64.argtypes = [Value]
__lib__.myelin_value_get_int64.restype  = ctypes.c_int64
__lib__.myelin_value_set_int64.argtypes = [Value, ctypes.c_int64]
__lib__.myelin_value_set_int64.restype  = None

# unsigned 64bit integer
__lib__.myelin_value_get_uint64.argtypes = [Value]
__lib__.myelin_value_get_uint64.restype  = ctypes.c_uint64
__lib__.myelin_value_set_uint64.argtypes = [Value, ctypes.c_uint64]
__lib__.myelin_value_set_uint64.restype  = None

# float
__lib__.myelin_value_get_float.argtypes = [Value]
__lib__.myelin_value_get_float.restype  = ctypes.c_float
__lib__.myelin_value_set_float.argtypes = [Value, ctypes.c_float]
__lib__.myelin_value_set_float.restype  = None

# double
__lib__.myelin_value_get_double.argtypes = [Value]
__lib__.myelin_value_get_double.restype  = ctypes.c_double
__lib__.myelin_value_set_double.argtypes = [Value, ctypes.c_double]
__lib__.myelin_value_set_double.restype  = None

# string
__lib__.myelin_value_get_string.argtypes = [Value]
__lib__.myelin_value_get_string.restype  = ctypes.c_char_p
__lib__.myelin_value_set_string.argtypes = [Value, ctypes.c_char_p]
__lib__.myelin_value_set_string.restype  = None

# pointer
__lib__.myelin_value_get_pointer.argtypes = [Value]
__lib__.myelin_value_get_pointer.restype  = ctypes.c_void_p
__lib__.myelin_value_set_pointer.argtypes = [Value, ctypes.c_void_p]
__lib__.myelin_value_set_pointer.restype  = None



